add annotation in project